--- a/components/list/list.module.css
+++ b/components/list/list.module.css
@@ -4,5 +4,18 @@
 }
 
 .item {
-    text-align: center;
+    max-width: 20%;
+}
+
+.poster img {
+    border-radius: .5em;
+}
+
+.title {
+    font-weight: bold;
+}
+
+.link {
+    color: black;
+    text-decoration: none;
 }
