--- a/components/search/search.module.css
+++ b/components/search/search.module.css
@@ -1,5 +1,15 @@
-.form {
+.search {
     display: flex;
+}
+
+.home {
+    padding-right: 1em;
+}
+
+.form {
+    flex: 1;
+    display: flex;
+    height: 2em;
 }
 
 .input {
