--- a/components/cast/cast.module.css
+++ b/components/cast/cast.module.css
@@ -1,11 +1,15 @@
+.title {
+  margin: 1em 0;
+}
+
 .list {
-    display: flex;
+  display: flex;
 }
 
 .element {
-    width: 25%;
+  width: 25%;
 }
 
 .element img {
-    border-radius: 1em;
+  border-radius: 1em;
 }
