--- a/components/search/search.module.css
+++ b/components/search/search.module.css
@@ -1,5 +1,7 @@
 .search {
     display: flex;
+    width: 100%;
+    margin: 1em 0;
 }
 
 .home {
@@ -12,6 +14,27 @@
     height: 2em;
 }
 
+.select {
+    border: 0;
+    border-right: 1px solid black;
+    border-top-left-radius: .25em;
+    border-bottom-left-radius: .25em;
+}
+
 .input {
     flex: 1;
+    padding: 1em;
+    border: 0;
+    border-right: 1px solid black;
+}
+
+.button {
+    padding: .5em;
+    border: 0;
+    border-top-right-radius: .25em;
+    border-bottom-right-radius: .25em;
+}
+
+.button:hover {
+    cursor: pointer;
 }
