--- a/pages/movie/movie.module.css
+++ b/pages/movie/movie.module.css
@@ -1,11 +1,14 @@
 .information {
     display: flex;
-    margin-top: 1em;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 .poster {
     width: 25%;
-    margin-right: 1em;
+    margin-right: 2em;
+    border: .25em solid white;
+    border-radius: .1em;
 }
 
 .poster img {
@@ -14,6 +17,18 @@
 
 .details {
     width: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.header {
+    font-size: 2.5em;
+}
+
+.overview {
+    margin-top: .5em;
+    line-height: 1.75em;
 }
 
 .people {
