--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,15 @@
     padding: 0;
 }
 
-main {
+body {
     margin: 0 3.5em;
+    background-color: black;
+}
+
+h1, h2, h3, h4, p {
+    color: white;
+}
+
+.hidden {
+    display: none;
 }
