--- a/components/list/list.module.css
+++ b/components/list/list.module.css
@@ -6,21 +6,25 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 1.5em;
+    flex-wrap: wrap;
 }
 
 .item {
-    max-width: 20%;
-}
-
-.poster img {
+    background-color: rgba(255,255,255,.1);
     border-radius: .5em;
 }
 
 .title {
-    font-weight: bold;
+    text-align: center;
+    padding: .5em 0 .75em;
 }
 
 .link {
     color: black;
     text-decoration: none;
+}
+
+.poster img {
+    border-top-left-radius: .5em !important;
+    border-top-right-radius: .5em !important;
 }
