--- a/pages/movie/movie.module.css
+++ b/pages/movie/movie.module.css
@@ -1,3 +1,8 @@
+.movie {
+    margin-top: 1.75em;
+    border-top: 3px solid rgba(255,255,255,.1);
+}
+
 .information {
     display: flex;
     margin-top: 2em;
@@ -11,15 +16,8 @@
     border-radius: .1em;
 }
 
-.poster img {
-    border-radius: 1em;
-}
-
 .details {
     width: 75%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 .header {
