--- a/pages/person/person.module.css
+++ b/pages/person/person.module.css
@@ -1,17 +1,25 @@
 .information {
   display: flex;
-  margin-top: 1em;
+  margin-top: 1.75em;
+  border-top: 3px solid rgba(255,255,255,.1);
+  border-bottom: 3px solid rgba(255,255,255,.1);
+  padding: 2em 0;
 }
 
 .poster {
-  width: 25%;
+  flex: 1;
   margin-right: 1em;
 }
 
-.poster img {
+.poster img:last-of-type {
   border-radius: 1em;
+  border: 3px solid white !important;
 }
 
 .details {
-  width: 75%;
+  flex: 4;
+}
+
+.biography {
+    margin-top: .5em;
 }
